--- a/sprint6/src/app/home/home.component.scss
+++ b/sprint6/src/app/home/home.component.scss
@@ -25,5 +25,15 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center; 
+  justify-content: center;
+}
+
+.servicio.expand {
+  height: auto;
+}
+
+.panel-row {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
 }
