--- a/sprint6/src/app/home/home.component.html
+++ b/sprint6/src/app/home/home.component.html
@@ -32,8 +32,8 @@
       <form [formGroup]="serviciosForm" (submit)="handleSubmit()">
         <fieldset>
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="ads" (change)="handleSubmit()">
-            <label class="form-check-label" for="flexCheckDefault">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2" formControlName="ads" (change)="handleSubmit()">
+            <label class="form-check-label" for="flexCheckDefault2">
               Añadir
             </label>
           </div>
@@ -52,8 +52,8 @@
     <div class="col">
       <form [formGroup]="serviciosForm" (submit)="handleSubmit()">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" formControlName="web" (change)="handleSubmit()" >
-          <label class="form-check-label" for="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3" formControlName="web" (change)="handleSubmit()" >
+          <label class="form-check-label" for="flexCheckDefault3">
             Añadir
           </label>
         </div>
