--- a/sprint6/src/app/shared/modal2/modal2.component.html
+++ b/sprint6/src/app/shared/modal2/modal2.component.html
@@ -1,16 +1,16 @@
-<button type="button" class="btn-icon" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<button type="button" class="btn-icon" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
   <img src="assets/circle-info-solid.svg" alt="Icono de informacion" class="icons" >
 </button>
 
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">Número de lenguages</h1>
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Número de páginas</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Añade los lenguajes que tendrá tu proyecto
+        Añade el número de páginas que tendrá tu proyecto
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -18,6 +18,3 @@
     </div>
   </div>
 </div>
-
-
-<app-budgets-list></app-budgets-list>
