--- a/sprint6/src/app/panel/panel.component.scss
+++ b/sprint6/src/app/panel/panel.component.scss
@@ -1,12 +1,16 @@
 .container {
-  max-width: 600px;
+  max-width: 100%;
   margin: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .panelForm {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start; 
+  flex-direction: row-reverse;
+  justify-content: flex-start;
   height: 100%;
 }
 
@@ -37,5 +41,5 @@
 .icons {
   width: 20px;
   height: 20px;
-  margin: 0 10px;
+  margin: 10px 10px;
 }
