--- a/sprint6/src/app/budgets-list/budgets-list.component.html
+++ b/sprint6/src/app/budgets-list/budgets-list.component.html
@@ -50,26 +50,36 @@
   </div>
 </div>
 
-@if(listaBudget.length > 0){
-<div class="container formulario">
-  <div class="row">
-    <h4 class="col-12 ms-4 p-4">Presupuesto en curso: </h4>
+@if (listaBudget.length > 0) {
+  <div class="container formulario">
+    <div class="row">
+      <h4 class="col-12 ms-4 p-4">Presupuesto en curso: </h4>
+    </div>
+    @for (budget of listaBudget; track budget) {
+      <div class="row servicio">
+        <div class="col">
+          <h4 class="col-12">{{ budget.nombre }}</h4>
+          <p>{{ budget.email }}</p>
+          <p>{{ budget.telefono }}</p>
+        </div>
+        <div class="col">
+          <h4>Servicios contratados</h4>
+          <ul>
+            @for (service of budget.services; track service) {
+              <li>
+                {{ service.name }} - {{ service.price }}$
+                @if (service.name === 'Web') {
+                  ({{ service.pages }} páginas, {{ service.languages }} lenguajes)
+                }
+              </li>
+            }
+          </ul>
+        </div>
+        <div class="col">
+          <h6>Total</h6>
+          <h4>{{ budget.total }}$</h4>
+        </div>
+      </div>
+    }
   </div>
-  <div class="row servicio">
-    <div class="col">
-      <h4 class="col-12">{{this.listaBudget[0].nombre}}</h4>
-      <p>{{this.listaBudget[0].email}}</p>
-      <p>{{this.listaBudget[0].telefono}}</p>
-    </div>
-    <div class="col">
-      <h4>Servicios contratados</h4>
-      <p>prueba</p>
-      <p>prueba</p>
-    </div>
-    <div class="col">
-      <h6>Total</h6>
-     <h4>prueba</h4>
-    </div>
-  </div>
-</div>
 }
