--- a/sprint6/src/app/budgets-list/budgets-list.component.html
+++ b/sprint6/src/app/budgets-list/budgets-list.component.html
@@ -53,7 +53,30 @@
 @if (listaBudget.length > 0) {
   <div class="container formulario">
     <div class="row">
-      <h4 class="col-12 ms-4 p-4">Presupuesto en curso: </h4>
+        <h4 class="col-12 m-4">Presupuesto en curso: </h4>
+    </div>
+    <div class="d-flex flex-row-reverse me-4">
+      <div class="p-2 sort-header" (click)="sortBudgetBy('nombre')" [ngClass]="{'active': activeSort === 'nombre'}">
+        Nombre
+        @if(activeSort === 'nombre') {
+          <img [src]="sortState['nombre'] ? 'assets/caret-up-solid.svg' : 'assets/caret-down-solid.svg'" class="sort-icon" />
+        }
+      </div>
+      <div class="p-2 sort-header" (click)="sortBudgetBy('total')" [ngClass]="{'active': activeSort === 'total'}">
+        Importe
+        @if(activeSort === 'total') {
+          <img [src]="sortState['total'] ? 'assets/caret-up-solid.svg' : 'assets/caret-down-solid.svg'" class="sort-icon" />
+        }
+      </div>
+      <div class="p-2 sort-header" (click)="sortBudgetBy('date')" [ngClass]="{'active': activeSort === 'date'}">
+        Fecha
+        @if(activeSort === 'date') {
+          <img [src]="sortState['date'] ? 'assets/caret-up-solid.svg' : 'assets/caret-down-solid.svg'" class="sort-icon" />
+        }
+      </div>
+      <button class="btn-icon">
+        <img src="assets/lupa.svg" alt="Icono de buscar" class="icons" >
+      </button>
     </div>
     @for (budget of listaBudget; track budget) {
       <div class="row servicio">
