--- a/sprint6/src/app/budgets-list/budgets-list.component.scss
+++ b/sprint6/src/app/budgets-list/budgets-list.component.scss
@@ -27,6 +27,37 @@
   color: red;
 }
 
+.btn-icon {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.icons {
+  width: 20px;
+  height: 20px;
+  margin: 10px 10px;
+}
+
+.sort-header {
+  cursor: pointer;
+  color: black;
+  display: flex;
+  align-items: center;
+}
+
+.sort-header.active {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.sort-icon {
+  margin-left: 5px;
+  width: 12px;
+  height: 12px;
+}
+
 @media (min-width: 768px) {
   .servicio {
     height: 180px;;
