--- a/sprint6/src/app/budgets-list/budgets-list.component.scss
+++ b/sprint6/src/app/budgets-list/budgets-list.component.scss
@@ -34,11 +34,11 @@
   padding: 0;
 }
 
-.icons {
-  width: 20px;
-  height: 20px;
-  margin: 10px 10px;
-}
+// .icons {
+//   width: 20px;
+//   height: 20px;
+//   margin: 10px 10px;
+// }
 
 .sort-header {
   cursor: pointer;
@@ -56,6 +56,30 @@
   margin-left: 5px;
   width: 12px;
   height: 12px;
+}
+
+.search-bar{
+  border-radius: 10px;
+  border-color: #cecece;
+  height: 40px;
+  width: 100%;
+  padding-right: 30px;
+  box-sizing: border-box;
+}
+.search-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  position: absolute;
+  right: 10px;
+  height: 20px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  margin: -8px -4px;
 }
 
 @media (min-width: 768px) {
