--- a/sprint6/src/app/shared/modal/modal.component.html
+++ b/sprint6/src/app/shared/modal/modal.component.html
@@ -10,7 +10,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Añade los lenguajes que tendrá tu proyecto
+        Añade los lenguajes que tendrá tu proyecto. Mínimo 1.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -18,6 +18,3 @@
     </div>
   </div>
 </div>
-
-
-
