--- a/sprint6/src/app/shared/modal2/modal2.component.html
+++ b/sprint6/src/app/shared/modal2/modal2.component.html
@@ -10,7 +10,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Añade el número de páginas que tendrá tu proyecto
+        Añade el número de páginas que tendrá tu proyecto. Mínimo 1.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
