--- a/sprint6/src/app/home/home.component.html
+++ b/sprint6/src/app/home/home.component.html
@@ -72,4 +72,5 @@
   </div>
 </div>
 
-<app-budgets-list></app-budgets-list>
+<app-budgets-list (resetFormEvent)="resetServiciosForm()"></app-budgets-list>
+
